<resources>
    <string name="app_name">Yohady</string>
    <string name="error_message">something went wrong, please try again</string>
    <string name="product_price">%1$s EGP </string>
    <string name="product_reviews">%1$d reviews </string>
    <string name="product_quantity">%1$d pcs </string>

    <string name="name_edit_hint">Name</string>
    <string name="fname_edit_hint">First Name</string>
    <string name="lname_edit_hint">Last Name</string>
    <string name="address1_edit_hint">Address 1</string>
    <string name="address2_edit_hint">Address 2</string>
    <string name="state_edit_hint">State</string>
    <string name="city_edit_hint">City</string>
    <string name="zip_code_edit_hint">Zip Code</string>
    <string name="phone_edit_hint">phone number</string>
    <string name="email_edit_hint">Email address</string>
    <string name="country_edit_hint">country</string>

    <string name="roboto_regular">fonts/Roboto-Regular.ttf</string>
    <string name="roboto_medium">fonts/Roboto-Medium.ttf</string>
    <string name="roboto_bold">fonts/Roboto-Bold.ttf</string>
    <string name="success_deleted">successfully deleted</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="cod_description">order will be delivered to your shipping address and money will be collected</string>
    <string name="main_activity_title">Home</string>
    <string name="successful_order_message">congratulation ! \n your order was placed successfully</string>
    <string name="dosis_regular">fonts/Dosis-Regular.otf</string>
    <string name="dosis_medium">fonts/Dosis-Medium.otf</string>
    <string name="dosis_bold">fonts/Dosis-Bold.otf</string>
    <string name="dosis_extra_bold">fonts/Dosis-ExtraBold.otf</string>
    <string name="cart_activity_title">Yor Cart</string>
    <string name="address_frag_title">Complete Address</string>
    <string name="checkout_activity_title">CHECKOUT</string>

    <string name="search_bar_hint_text">What are you looking fie?</string>

    <string name="invalid_coupon">invalid coupon code</string>
    <string name="deprecated_coupon">deprecated coupon</string>
    <string name="slogan">Gifting Made Easy</string>
    <string name="error_loading_order_Items">Error loading Order Items</string>

</resources>
