<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="15dp"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fname_textInputLayout"
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                app:errorTextAppearance="@style/erroStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/lname_textInputLayout"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/fname_edittext"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/fname_edit_hint"
                    android:inputType="text"
                    tools:text="ahmed"
                    android:textColor="#56203D"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lname_textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:errorTextAppearance="@style/erroStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fname_textInputLayout"
                app:layout_constraintTop_toTopOf="@id/fname_textInputLayout">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/lname_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lname_edit_hint"
                    tools:text="khaled"
                    android:inputType="text"
                    android:textColor="#56203D" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/state_textInputLayout"
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                app:errorTextAppearance="@style/erroStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/city_textInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/fname_textInputLayout">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/state_edittext"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/state_edit_hint"
                    android:inputType="text"
                    tools:text="daahlia"
                    android:textColor="#56203D"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/city_textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:errorTextAppearance="@style/erroStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/state_textInputLayout"
                app:layout_constraintTop_toTopOf="@id/state_textInputLayout">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/city_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city_edit_hint"
                    tools:text="mansoura"
                    android:inputType="text"
                    android:textColor="#56203D" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/address1_textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                app:errorTextAppearance="@style/erroStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/state_textInputLayout">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/address1_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address1_edit_hint"
                    tools:text="15 gehan street"
                    android:inputType="textMultiLine"
                    android:textColor="#56203D"
                    />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/address2_textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                app:errorTextAppearance="@style/erroStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address1_textInputLayout">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/address2_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address2_edit_hint"
                    android:inputType="textMultiLine"
                    android:textColor="#56203D"
                    />
            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/zip_code_textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                app:errorTextAppearance="@style/erroStyle"
                app:layout_constraintEnd_toStartOf="@id/country_textInputLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address2_textInputLayout">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/zip_code_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/zip_code_edit_hint"
                    tools:text="12345"
                    android:inputType="numberDecimal"
                    android:textColor="#56203D"
                    />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/country_textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:errorTextAppearance="@style/erroStyle"
                app:layout_constraintStart_toEndOf="@id/zip_code_textInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/zip_code_textInputLayout">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/country_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="state"
                    tools:text="Egypt"
                    android:inputType="text"
                    android:textColor="#56203D"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phone_textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                app:errorTextAppearance="@style/erroStyle"
                app:layout_constraintStart_toStartOf="@+id/zip_code_textInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/zip_code_textInputLayout">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/phone_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_edit_hint"
                    tools:text="0123456789"
                    android:inputType="phone"
                    android:textColor="#56203D"
                    />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                app:errorTextAppearance="@style/erroStyle"
                app:layout_constraintStart_toStartOf="@+id/zip_code_textInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/phone_textInputLayout">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_edit_hint"
                    tools:text="customer@gmail.com"
                    android:inputType="textEmailAddress"
                    android:textColor="#56203D"
                    />
            </android.support.design.widget.TextInputLayout>




            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:visibility="gone"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/proceedToPayment"
                app:layout_constraintTop_toBottomOf="@id/email_textInputLayout"
                android:background="@drawable/empty_cart_box"
                android:text="Proceed to payment"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp"
                android:padding="15dp"
                android:layout_marginTop="15dp"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

</ScrollView>